--- a/src/css/output.css
+++ b/src/css/output.css
@@ -588,6 +588,10 @@ video {
   }
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .absolute {
   position: absolute;
 }
@@ -602,6 +606,14 @@ video {
 
 .-start-1\.5 {
   inset-inline-start: -0.375rem;
+}
+
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.right-4 {
+  right: 1rem;
 }
 
 .mx-8 {
@@ -655,8 +667,31 @@ video {
   box-sizing: border-box;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
+}
+
+.size-\[52px\] {
+  width: 52px;
+  height: 52px;
+}
+
+.size-2 {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .h-16 {
@@ -669,6 +704,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.max-h-0 {
+  max-height: 0px;
 }
 
 .w-3 {
@@ -691,12 +730,20 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-around {
   justify-content: space-around;
 }
 
 .gap-8 {
   gap: 2rem;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
 }
 
 .rounded-full {
@@ -743,6 +790,21 @@ video {
   background-color: rgb(46 52 64 / var(--tw-bg-opacity));
 }
 
+.bg-nord-11 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 97 106 / var(--tw-bg-opacity));
+}
+
+.bg-nord-15 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(180 142 173 / var(--tw-bg-opacity));
+}
+
+.bg-nord-3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(76 86 106 / var(--tw-bg-opacity));
+}
+
 .bg-nord-7 {
   --tw-bg-opacity: 1;
   background-color: rgb(143 188 187 / var(--tw-bg-opacity));
@@ -751,6 +813,14 @@ video {
 .bg-nord-8 {
   --tw-bg-opacity: 1;
   background-color: rgb(136 192 208 / var(--tw-bg-opacity));
+}
+
+.stroke-nord-6 {
+  stroke: #ECEFF4;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-16 {
@@ -842,6 +912,25 @@ video {
   color: rgb(143 188 187 / var(--tw-text-opacity));
 }
 
+.text-nord-4 {
+  --tw-text-opacity: 1;
+  color: rgb(216 222 233 / var(--tw-text-opacity));
+}
+
+.text-opacity-50 {
+  --tw-text-opacity: 0.5;
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -850,14 +939,44 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-\[colors\2c _transform\] {
+  transition-property: colors, transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-\[max-height\] {
+  transition-property: max-height;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .hover\:border-nord-7:hover {
   --tw-border-opacity: 1;
   border-color: rgb(143 188 187 / var(--tw-border-opacity));
 }
 
+.hover\:bg-nord-4:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 222 233 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-nord-8:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(136 192 208 / var(--tw-bg-opacity));
+}
+
+.hover\:stroke-nord-3:hover {
+  stroke: #4C566A;
+}
+
+.hover\:text-nord-8:hover {
+  --tw-text-opacity: 1;
+  color: rgb(136 192 208 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-lg:hover {
@@ -869,6 +988,10 @@ video {
 @media (min-width: 768px) {
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:pt-16 {
+    padding-top: 4rem;
   }
 
   .md\:pt-32 {
