--- a/src/css/output.css
+++ b/src/css/output.css
@@ -671,62 +671,18 @@ video {
   box-sizing: border-box;
 }
 
-.inline-block {
-  display: inline-block;
-}
-
 .flex {
   display: flex;
 }
 
-.size-12 {
-  width: 3rem;
-  height: 3rem;
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
-.size-\[52px\] {
-  width: 52px;
-  height: 52px;
-}
-
-.size-\[calc\(1rem\+1vw\)\] {
-  width: calc(1rem + 1vw);
-  height: calc(1rem + 1vw);
-}
-
-.size-\[calc\(2rem\+1vw\)\] {
-  width: calc(2rem + 1vw);
-  height: calc(2rem + 1vw);
-}
-
-.size-\[calc\(2rem\+2vw\)\] {
-  width: calc(2rem + 2vw);
-  height: calc(2rem + 2vw);
-}
-
-.size-\[calc\(1rem\+2vw\)\] {
-  width: calc(1rem + 2vw);
-  height: calc(1rem + 2vw);
-}
-
-.size-\[calc\(0rem\+2vw\)\] {
-  width: calc(0rem + 2vw);
-  height: calc(0rem + 2vw);
-}
-
-.size-\[calc\(2rem\)\] {
-  width: calc(2rem);
-  height: calc(2rem);
-}
-
-.size-1 {
-  width: 0.25rem;
-  height: 0.25rem;
-}
-
-.size-10 {
-  width: 2.5rem;
-  height: 2.5rem;
+.size-4 {
+  width: 1rem;
+  height: 1rem;
 }
 
 .size-8 {
@@ -739,11 +695,6 @@ video {
   height: 1.5rem;
 }
 
-.size-5 {
-  width: 1.25rem;
-  height: 1.25rem;
-}
-
 .h-16 {
   height: 4rem;
 }
@@ -752,12 +703,12 @@ video {
   height: 0.75rem;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-6 {
   height: 1.5rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .max-h-0 {
@@ -768,12 +719,17 @@ video {
   width: 0.75rem;
 }
 
+.w-6 {
+  width: 1.5rem;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-6 {
-  width: 1.5rem;
+.rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-col {
@@ -852,21 +808,6 @@ video {
   background-color: rgb(46 52 64 / var(--tw-bg-opacity));
 }
 
-.bg-nord-11 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 97 106 / var(--tw-bg-opacity));
-}
-
-.bg-nord-13 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(235 203 139 / var(--tw-bg-opacity));
-}
-
-.bg-nord-15 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(180 142 173 / var(--tw-bg-opacity));
-}
-
 .bg-nord-3 {
   --tw-bg-opacity: 1;
   background-color: rgb(76 86 106 / var(--tw-bg-opacity));
@@ -890,6 +831,22 @@ video {
   padding: 1rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
+.p-0\.5 {
+  padding: 0.125rem;
+}
+
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -909,12 +866,13 @@ video {
   padding-top: 2rem;
 }
 
-.pt-64 {
-  padding-top: 16rem;
-}
-
 .text-center {
   text-align: center;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-4xl {
@@ -935,32 +893,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-\[calc\(1rem_1vw\)\] {
-  font-size: calc(1rem 1vw);
-}
-
-.text-\[calc\(1rem\+1vw\)\] {
-  font-size: calc(1rem + 1vw);
-}
-
-.text-\[calc\(2rem\+1vw\)\] {
-  font-size: calc(2rem + 1vw);
-}
-
-.text-\[calc\(2rem\+2vw\)\] {
-  font-size: calc(2rem + 2vw);
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-bold {
@@ -990,8 +922,9 @@ video {
   color: rgb(143 188 187 / var(--tw-text-opacity));
 }
 
-.text-\[cal\] {
-  color: cal;
+.text-nord-11 {
+  --tw-text-opacity: 1;
+  color: rgb(191 97 106 / var(--tw-text-opacity));
 }
 
 .text-opacity-50 {
@@ -1061,6 +994,11 @@ video {
   color: rgb(136 192 208 / var(--tw-text-opacity));
 }
 
+.hover\:text-nord-3:hover {
+  --tw-text-opacity: 1;
+  color: rgb(76 86 106 / var(--tw-text-opacity));
+}
+
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1071,10 +1009,6 @@ video {
   .sm\:size-8 {
     width: 2rem;
     height: 2rem;
-  }
-
-  .sm\:pt-64 {
-    padding-top: 16rem;
   }
 
   .sm\:text-4xl {
@@ -1094,9 +1028,5 @@ video {
 
   .md\:pt-32 {
     padding-top: 8rem;
-  }
-
-  .md\:pt-64 {
-    padding-top: 16rem;
   }
 }
