--- a/src/css/output.css
+++ b/src/css/output.css
@@ -667,17 +667,16 @@ video {
   margin-top: 0.375rem;
 }
 
-.box-border {
-  box-sizing: border-box;
+.block {
+  display: block;
 }
 
 .flex {
   display: flex;
 }
 
-.size-5 {
-  width: 1.25rem;
-  height: 1.25rem;
+.grid {
+  display: grid;
 }
 
 .size-4 {
@@ -685,9 +684,9 @@ video {
   height: 1rem;
 }
 
-.size-8 {
-  width: 2rem;
-  height: 2rem;
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .size-6 {
@@ -695,8 +694,9 @@ video {
   height: 1.5rem;
 }
 
-.h-16 {
-  height: 4rem;
+.size-\[250px\] {
+  width: 250px;
+  height: 250px;
 }
 
 .h-3 {
@@ -705,10 +705,6 @@ video {
 
 .h-6 {
   height: 1.5rem;
-}
-
-.h-full {
-  height: 100%;
 }
 
 .max-h-0 {
@@ -727,9 +723,12 @@ video {
   width: 100%;
 }
 
-.rotate-180 {
-  --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.flex-grow {
+  flex-grow: 1;
+}
+
+.grid-rows-\[0fr\] {
+  grid-template-rows: 0fr;
 }
 
 .flex-col {
@@ -748,6 +747,10 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .justify-around {
   justify-content: space-around;
 }
@@ -758,6 +761,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-y-hidden {
@@ -776,10 +783,6 @@ video {
   border-width: 1px;
 }
 
-.border-b-4 {
-  border-bottom-width: 4px;
-}
-
 .border-s {
   border-inline-start-width: 1px;
 }
@@ -789,18 +792,9 @@ video {
   border-color: rgb(236 239 244 / var(--tw-border-opacity));
 }
 
-.border-nord-7 {
-  --tw-border-opacity: 1;
-  border-color: rgb(143 188 187 / var(--tw-border-opacity));
-}
-
 .border-nord-8 {
   --tw-border-opacity: 1;
   border-color: rgb(136 192 208 / var(--tw-border-opacity));
-}
-
-.border-transparent {
-  border-color: transparent;
 }
 
 .bg-nord-0 {
@@ -808,14 +802,14 @@ video {
   background-color: rgb(46 52 64 / var(--tw-bg-opacity));
 }
 
+.bg-nord-11 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 97 106 / var(--tw-bg-opacity));
+}
+
 .bg-nord-3 {
   --tw-bg-opacity: 1;
   background-color: rgb(76 86 106 / var(--tw-bg-opacity));
-}
-
-.bg-nord-7 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(143 188 187 / var(--tw-bg-opacity));
 }
 
 .bg-nord-8 {
@@ -827,34 +821,21 @@ video {
   stroke: #ECEFF4;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-2 {
   padding: 0.5rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-0 {
-  padding: 0px;
-}
-
-.p-0\.5 {
-  padding: 0.125rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .py-4 {
@@ -868,6 +849,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-2xl {
@@ -899,6 +884,10 @@ video {
   font-weight: 700;
 }
 
+.font-normal {
+  font-weight: 400;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -917,14 +906,9 @@ video {
   color: rgb(236 239 244 / var(--tw-text-opacity));
 }
 
-.text-nord-7 {
+.text-nord-8 {
   --tw-text-opacity: 1;
-  color: rgb(143 188 187 / var(--tw-text-opacity));
-}
-
-.text-nord-11 {
-  --tw-text-opacity: 1;
-  color: rgb(191 97 106 / var(--tw-text-opacity));
+  color: rgb(136 192 208 / var(--tw-text-opacity));
 }
 
 .text-opacity-50 {
@@ -960,8 +944,20 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-\[grid-template-rows\] {
+  transition-property: grid-template-rows;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-\[max-height\] {
   transition-property: max-height;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-transform {
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -970,9 +966,29 @@ video {
   transition-duration: 300ms;
 }
 
-.hover\:border-nord-7:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(143 188 187 / var(--tw-border-opacity));
+.before\:text-nord-8::before {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(136 192 208 / var(--tw-text-opacity));
+}
+
+.before\:content-\[\'\.\'\]::before {
+  --tw-content: '.';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'\2514\2500\2500\2500\'\]::before {
+  --tw-content: '└───';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'\251C\2500\2500\2500\'\]::before {
+  --tw-content: '├───';
+  content: var(--tw-content);
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:bg-nord-4:hover {
@@ -980,18 +996,13 @@ video {
   background-color: rgb(216 222 233 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-nord-8:hover {
+.hover\:bg-nord-7:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(136 192 208 / var(--tw-bg-opacity));
+  background-color: rgb(143 188 187 / var(--tw-bg-opacity));
 }
 
 .hover\:stroke-nord-3:hover {
   stroke: #4C566A;
-}
-
-.hover\:text-nord-8:hover {
-  --tw-text-opacity: 1;
-  color: rgb(136 192 208 / var(--tw-text-opacity));
 }
 
 .hover\:text-nord-3:hover {
@@ -999,10 +1010,34 @@ video {
   color: rgb(76 86 106 / var(--tw-text-opacity));
 }
 
+.hover\:text-nord-8:hover {
+  --tw-text-opacity: 1;
+  color: rgb(136 192 208 / var(--tw-text-opacity));
+}
+
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:before\:text-nord-8:hover::before {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(136 192 208 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:grid-rows-\[1fr\] {
+  grid-template-rows: 1fr;
+}
+
+.group:hover .group-hover\:grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 @media (min-width: 640px) {
@@ -1018,6 +1053,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1028,5 +1071,10 @@ video {
 
   .md\:pt-32 {
     padding-top: 8rem;
+  }
+
+  .md\:before\:content-none::before {
+    --tw-content: none;
+    content: var(--tw-content);
   }
 }
