fix: blog posts are now being generated

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,7 +10,7 @@
   <header>
     {{ partial "header.html" . }}
   </header>
-  <main class="container flex flex-col gap-8 md:pt-32 pt-8">
+  <main class="container flex flex-col gap-8 md:pt-32 py-8">
     {{ block "main" . }}{{ end }}
   </main>
 </body>
